modules/core/client/css/kalli.css
/********************* TYPOGRAPHY ********************* */
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');


/********************* BODY ********************* */
body {
	padding-top: 50px;
	font-family: 'Roboto', sans-serif;
	font-weight: 300;
	background-color: #fff;
	letter-spacing: -0.02em;
	font-size: 14px;
	overflow-x: hidden;
}

ul {
	-webkit-padding-start: 0px !important;
	-webkit-margin-before: 0px !important;
	-webkit-margin-after: 0px !important;
}

/********************* HEADER ********************* */
.kalli-header {
	position: relative;
	margin: 120px 0 300px 0;	
	display: block;
}

.kalli-header-title {
	width: 300px;
	height: 200px;
	display: inline-block;
	/*border: 1px solid #00f;*/
	position: relative;
	font-family: 'PT Serif';
	font-size: 64px;
}

.kalli-header-subtitle {
	width: 280px;
	display: inline-block;
	/*border: 1px solid #00f;*/
	position: absolute;
	left: 0;
	top: 200px;
	font-size: 28px;
}

.kalli-header-image {
	/*border: 1px solid #00f;*/
	width: 820px;
	height: 440px;
	display: inline-block;
	position: absolute;
	margin: 0 auto;
	background-image: url(../img/header.png);
}
/********************* STEPS ********************* */
.kalli-inline-header {
	text-align: center;
	font-size: 28px;
	margin: 100px 0;
	position: relative;
	display: block;
	font-family: 'PT Serif';
	font-weight: 500;
	/*border: 1px solid #00f;*/
}

.kalli-steps-list > ul > li {
	width: 400px;
	margin: 20px 0;
	display: block;
	padding: 0px;
	/*border: 1px solid #00f;*/
}
/********************* FEATURES ********************* */
.kalli-features-list > ul > li {
	width: 25%;
	margin: 0 40px;
	display: inline-block;
	/*border: 1px solid #00f;*/
	padding: 0;
	text-align: center;
	font-size: 24px;
}

.kalli-features-list > ul > li > .feature1 {
	margin: 0 auto;
	width: 150px;
	height: 130px;
	background-image: url(../img/feature1.png);
}

.kalli-features-list > ul > li > .feature2 {
	margin: 0 auto;
	width: 150px;
	height: 150px;
	background-image: url(../img/feature2.png);
}

.kalli-features-list > ul > li > .feature3 {
	margin: 0 auto;
	width: 180px;
	height: 130px;
	background-image: url(../img/feature3.png);
}
/********************* COURSES ********************* */
.kalli-course-card {
	width: 300px;
	height: auto;
	min-height: 140px;
	border: 0.5px solid rgba(0,0,0,0.40);
	background: #FFFFFF;
	box-shadow: 5px 5px 10px 0 rgba(0,0,0,0.40);
	border-radius: 6px;
	cursor: pointer;
}

.kalli-course-card:hover {
	box-shadow: 5px 5px 10px 0 rgba(0,0,0,0.5);

}

.kalli-course-title {
	font-size: 24px;
	margin: 0 auto;
	display: block;
	position: relative;
	text-align: left;
	padding: 20px;
}

.kalli-course-description-title {
	margin: 0px 20px;
	display: block;
	position: relative;	
	font-weight: 500;
}

.kalli-course-description {
	margin: 20px;
	display: block;
	position: relative;
}

.kalli-course-button {
	margin: 0 auto;
	background: rgba(0,0,0,0.1);
	/*border: 1px solid #979797;*/
	border-radius: 7px;
	display: block;
	position: relative;
}

.kalli-course-button:hover {
	background: rgba(0,0,0,0.3);
}


.kalli-course-concepts {
	margin: 20px 20px 0 20px;
	display: block;
	position: relative;
	opacity: 0.6;
}
/********************* LEARN MORE ********************* */
/********************* VIDEO ********************* */
.kalli-video{
	display: block;
	left: 33%;
	position: relative;
}
/********************* TEAM ********************* */
.kalli-team-list {
	display: block;
	position: relative;
}
.kalli-team-list > ul > li {
	width: 150px;
	margin: 0 18px;
	display: inline-block;
	text-align: center;	
}

.kalli-team-list > ul > li > .profile-photo {
	width: 150px;
	height: 100px;
	background: url(../img/profile-photo.png);
}

/********************* FOOTER ********************* */
.kalli-footer-list {
	margin: 150px 0 20px 0;
	display: block;
	position: relative;	
}
.kalli-footer-list > ul > li {
	margin: 0 100px 0 0;
	display: inline-block;
	/*border: 1px solid #00f;*/
	text-align: left;	
}

.kalli-footer-list > ul > li > .logo1 {
	width: 180px;
	height: 37px;
	background: url(../img/logo1.png);
}

.kalli-footer-list > ul > li > .logo2 {
	width: 117px;
	height: 45px;
	background: url(../img/logo2.png);
}

.kalli-footer-list > ul > li > .logo3 {
	width: 117px;
	height: 45px;
	background: url(../img/logo3.png);
}

